traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script.rpy", line 73, in script
    if Tax_paid = True:
  File "game/script.rpy", line 73
    Tax_paid = True
             ^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script.rpy", line 73, in script
    if Tax_paid = True:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1290, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 73
    Tax_paid = True
             ^^^^^^
SyntaxError: invalid syntax

macOS-15.6-arm64-arm-64bit arm64
Ren'Py 8.4.1.25072401
busstopsimulator 1.0
Sat Oct 18 20:16:37 2025
